@@ -188,12 +188,29 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
-          <argLine>-Xms1024m -Xmx1024m ${argLine}</argLine>
+          <argLine>-Xms1024m -Xmx1024m ${argLine}
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+              --add-opens java.base/java.util=ALL-UNNAMED
+              --add-opens java.base/java.math=ALL-UNNAMED
+              --add-opens java.base/java.io=ALL-UNNAMED
+              --add-opens java.base/java.net=ALL-UNNAMED
+              --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED
+          </argLine>
           <includes>
             <include>**/*Test.java</include>
             <include>**/*Tests.java</include>
             <include>**/*IT.java</include>
           </includes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.12.1</version>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+          <release>11</release>
         </configuration>
       </plugin>
       <plugin>
